@@ -18,7 +18,6 @@
  */
 package org.apache.syncope.client.console.topology;
 
-import com.fasterxml.jackson.databind.json.JsonMapper;
 import de.agilecoders.wicket.core.markup.html.bootstrap.dialog.Modal;
 import java.io.Serializable;
 import java.text.MessageFormat;
@@ -44,6 +43,7 @@ import org.apache.syncope.client.ui.commons.markup.html.form.IndicatingOnConfirm
 import org.apache.syncope.client.ui.commons.pages.BaseWebPage;
 import org.apache.syncope.client.ui.commons.wizards.AjaxWizard;
 import org.apache.syncope.common.lib.SyncopeClientException;
+import org.apache.syncope.common.lib.jackson.SyncopeJsonMapper;
 import org.apache.syncope.common.lib.to.ConnInstanceTO;
 import org.apache.syncope.common.lib.to.ResourceTO;
 import org.apache.syncope.common.lib.types.IdMEntitlement;
@@ -63,12 +63,13 @@ import org.apache.wicket.model.IModel;
 import org.apache.wicket.model.Model;
 import org.apache.wicket.model.StringResourceModel;
 import org.apache.wicket.spring.injection.annot.SpringBean;
+import tools.jackson.databind.json.JsonMapper;
 
 public class TopologyTogglePanel extends TogglePanel<Serializable> {
 
     private static final long serialVersionUID = -2025535531121434056L;
 
-    protected static final JsonMapper MAPPER = JsonMapper.builder().findAndAddModules().build();
+    protected static final JsonMapper MAPPER = new SyncopeJsonMapper();
 
     @SpringBean
     protected ConnectorRestClient connectorRestClient;
@@ -240,7 +241,7 @@ public class TopologyTogglePanel extends TogglePanel<Serializable> {
             public void onClick(final AjaxRequestTarget target) {
                 try {
                     connectorRestClient.delete(node.getKey());
-                    target.appendJavaScript(String.format("jsPlumb.remove('%s');", node.getKey()));
+                    target.appendJavaScript("jsPlumb.remove('%s');".formatted(node.getKey()));
                     SyncopeConsoleSession.get().success(getString(Constants.OPERATION_SUCCEEDED));
                     toggle(target, false);
                 } catch (SyncopeClientException e) {
@@ -359,7 +360,7 @@ public class TopologyTogglePanel extends TogglePanel<Serializable> {
             }
         };
         MetaDataRoleAuthorizationStrategy.authorize(history, RENDER,
-                String.format("%s,%s", IdMEntitlement.CONNECTOR_READ, IdRepoEntitlement.AUDIT_LIST));
+                "%s,%s".formatted(IdMEntitlement.CONNECTOR_READ, IdRepoEntitlement.AUDIT_LIST));
         fragment.add(history);
 
         return fragment;
@@ -376,7 +377,7 @@ public class TopologyTogglePanel extends TogglePanel<Serializable> {
             public void onClick(final AjaxRequestTarget target) {
                 try {
                     resourceRestClient.delete(node.getKey());
-                    target.appendJavaScript(String.format("jsPlumb.remove('%s');", node.getKey()));
+                    target.appendJavaScript("jsPlumb.remove('%s');".formatted(node.getKey()));
                     SyncopeConsoleSession.get().success(getString(Constants.OPERATION_SUCCEEDED));
                     toggle(target, false);
                 } catch (SyncopeClientException e) {
@@ -622,7 +623,7 @@ public class TopologyTogglePanel extends TogglePanel<Serializable> {
             }
         };
         MetaDataRoleAuthorizationStrategy.authorize(history, RENDER,
-                String.format("%s,%s", IdMEntitlement.RESOURCE_READ, IdRepoEntitlement.AUDIT_LIST));
+                "%s,%s".formatted(IdMEntitlement.RESOURCE_READ, IdRepoEntitlement.AUDIT_LIST));
         fragment.add(history);
 
         AjaxLink<String> clone = new IndicatingAjaxLink<>("clone") {
