@@ -18,9 +18,6 @@
  */
 package org.apache.syncope.client.console.topology;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.json.JsonMapper;
-import java.io.IOException;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -34,40 +31,38 @@ import java.util.concurrent.TimeoutException;
 import org.apache.syncope.client.console.SyncopeConsoleSession;
 import org.apache.syncope.client.console.rest.ConnectorRestClient;
 import org.apache.syncope.client.console.rest.ResourceRestClient;
+import org.apache.syncope.client.console.wicket.ws.BasePageWebSocketBehavior;
 import org.apache.syncope.common.keymaster.client.api.ConfParamOps;
 import org.apache.syncope.common.keymaster.client.api.ServiceOps;
 import org.apache.syncope.common.keymaster.client.api.model.NetworkService;
-import org.apache.wicket.protocol.ws.api.WebSocketBehavior;
+import org.apache.syncope.common.lib.jackson.SyncopeJsonMapper;
 import org.apache.wicket.protocol.ws.api.WebSocketRequestHandler;
 import org.apache.wicket.protocol.ws.api.message.TextMessage;
-import org.apache.wicket.spring.injection.annot.SpringBean;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.core.task.SimpleAsyncTaskExecutor;
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.json.JsonMapper;
 
-public class TopologyWebSocketBehavior extends WebSocketBehavior {
+public class TopologyWebSocketBehavior extends BasePageWebSocketBehavior.OnMessageChild {
 
     private static final long serialVersionUID = -1653665542635275551L;
 
     protected static final Logger LOG = LoggerFactory.getLogger(TopologyWebSocketBehavior.class);
 
-    protected static final JsonMapper MAPPER = JsonMapper.builder().findAndAddModules().build();
+    protected static final JsonMapper MAPPER = new SyncopeJsonMapper();
 
     protected static final String CONNECTOR_TEST_TIMEOUT_PARAMETER = "connector.test.timeout";
 
     protected static final String RESOURCE_TEST_TIMEOUT_PARAMETER = "resource.test.timeout";
 
-    @SpringBean
-    protected ServiceOps serviceOps;
+    protected final ServiceOps serviceOps;
 
-    @SpringBean
-    protected ConfParamOps confParamOps;
+    protected final ConfParamOps confParamOps;
 
-    @SpringBean
-    protected ConnectorRestClient connectorRestClient;
+    protected final ConnectorRestClient connectorRestClient;
 
-    @SpringBean
-    protected ResourceRestClient resourceRestClient;
+    protected final ResourceRestClient resourceRestClient;
 
     protected final Map<String, String> connectors = Collections.synchronizedMap(new HashMap<>());
 
@@ -76,8 +71,6 @@ public class TopologyWebSocketBehavior extends WebSocketBehavior {
     protected final Map<String, String> resources = Collections.synchronizedMap(new HashMap<>());
 
     protected final Set<String> runningResCheck = Collections.synchronizedSet(new HashSet<>());
-
-    protected final transient SimpleAsyncTaskExecutor executor = new SimpleAsyncTaskExecutor();
 
     protected String coreAddress;
 
@@ -89,8 +82,16 @@ public class TopologyWebSocketBehavior extends WebSocketBehavior {
 
     protected Integer resourceTestTimeout = null;
 
-    public TopologyWebSocketBehavior() {
-        executor.setVirtualThreads(true);
+    public TopologyWebSocketBehavior(
+            final ServiceOps serviceOps,
+            final ConfParamOps confParamOps,
+            final ConnectorRestClient connectorRestClient,
+            final ResourceRestClient resourceRestClient) {
+
+        this.serviceOps = serviceOps;
+        this.confParamOps = confParamOps;
+        this.connectorRestClient = connectorRestClient;
+        this.resourceRestClient = resourceRestClient;
 
         coreAddress = serviceOps.get(NetworkService.Type.CORE).getAddress();
         domain = SyncopeConsoleSession.get().getDomain();
@@ -119,16 +120,16 @@ public class TopologyWebSocketBehavior extends WebSocketBehavior {
                 response = checker.call();
             } else {
                 LOG.debug("Timeouts provided for resource connection checking ... ");
-                response = executor.submit(checker).get(timeout, TimeUnit.SECONDS);
+                response = SyncopeConsoleSession.get().execute(checker).get(timeout, TimeUnit.SECONDS);
             }
         } catch (InterruptedException | TimeoutException e) {
             LOG.warn("Connection with {} timed out", checker.key);
-            response = String.format("{ \"status\": \"%s\", \"target\": \"%s\"}",
-                    TopologyNode.Status.UNREACHABLE, checker.key);
+            response = "{ \"status\": \"%s\", \"target\": \"%s\"}".
+                    formatted(TopologyNode.Status.UNREACHABLE, checker.key);
         } catch (Exception e) {
             LOG.error("Unexpected exception connecting to {}", checker.key, e);
-            response = String.format("{ \"status\": \"%s\", \"target\": \"%s\"}",
-                    TopologyNode.Status.FAILURE, checker.key);
+            response = "{ \"status\": \"%s\", \"target\": \"%s\"}".
+                    formatted(TopologyNode.Status.FAILURE, checker.key);
         }
 
         Optional.ofNullable(response).ifPresent(r -> responses.put(checker.key, r));
@@ -140,15 +141,15 @@ public class TopologyWebSocketBehavior extends WebSocketBehavior {
     protected void onMessage(final WebSocketRequestHandler handler, final TextMessage message) {
         try {
             JsonNode obj = MAPPER.readTree(message.getText());
-            switch (Topology.SupportedOperation.valueOf(obj.get("kind").asText())) {
-                case CHECK_CONNECTOR:
-                    String ckey = obj.get("target").asText();
+            switch (Topology.SupportedOperation.valueOf(obj.get("kind").asString())) {
+                case CHECK_CONNECTOR -> {
+                    String ckey = obj.get("target").asString();
 
                     if (connectors.containsKey(ckey)) {
                         handler.push(connectors.get(ckey));
                     } else {
-                        handler.push(String.format(
-                                "{ \"status\": \"%s\", \"target\": \"%s\"}", TopologyNode.Status.UNKNOWN, ckey));
+                        handler.push("{ \"status\": \"%s\", \"target\": \"%s\"}".
+                                formatted(TopologyNode.Status.UNKNOWN, ckey));
                     }
 
                     if (runningConnCheck.contains(ckey)) {
@@ -163,16 +164,16 @@ public class TopologyWebSocketBehavior extends WebSocketBehavior {
                             LOG.error("Unexpected error", e);
                         }
                     }
-                    break;
+                }
 
-                case CHECK_RESOURCE:
-                    String rkey = obj.get("target").asText();
+                case CHECK_RESOURCE -> {
+                    String rkey = obj.get("target").asString();
 
                     if (resources.containsKey(rkey)) {
                         handler.push(resources.get(rkey));
                     } else {
-                        handler.push(String.format(
-                                "{ \"status\": \"%s\", \"target\": \"%s\"}", TopologyNode.Status.UNKNOWN, rkey));
+                        handler.push("{ \"status\": \"%s\", \"target\": \"%s\"}".
+                                formatted(TopologyNode.Status.UNKNOWN, rkey));
                     }
 
                     if (runningResCheck.contains(rkey)) {
@@ -187,18 +188,18 @@ public class TopologyWebSocketBehavior extends WebSocketBehavior {
                             LOG.error("Unexpected error", e);
                         }
                     }
-                    break;
+                }
 
-                case ADD_ENDPOINT:
-                    handler.appendJavaScript(String.format("addEndpoint('%s', '%s', '%s');",
-                            obj.get("source").asText(),
-                            obj.get("target").asText(),
-                            obj.get("scope").asText()));
-                    break;
+                case ADD_ENDPOINT ->
+                    handler.appendJavaScript("addEndpoint('%s', '%s', '%s');".formatted(
+                            obj.get("source").asString(),
+                            obj.get("target").asString(),
+                            obj.get("scope").asString()));
 
-                default:
+                default -> {
+                }
             }
-        } catch (IOException e) {
+        } catch (JacksonException e) {
             LOG.error("Error managing websocket message", e);
         }
     }
@@ -229,12 +230,12 @@ public class TopologyWebSocketBehavior extends WebSocketBehavior {
         @Override
         public String call() {
             try {
-                return String.format("{ \"status\": \"%s\", \"target\": \"%s\"}",
+                return "{ \"status\": \"%s\", \"target\": \"%s\"}".formatted(
                         connectorRestClient.check(coreAddress, domain, jwt, key)
                         ? TopologyNode.Status.REACHABLE : TopologyNode.Status.UNREACHABLE, key);
             } catch (Exception e) {
                 LOG.warn("Error checking connection for {}", key, e);
-                return String.format("{ \"status\": \"%s\", \"target\": \"%s\"}", TopologyNode.Status.FAILURE, key);
+                return "{ \"status\": \"%s\", \"target\": \"%s\"}".formatted(TopologyNode.Status.FAILURE, key);
             }
         }
     }
@@ -248,12 +249,12 @@ public class TopologyWebSocketBehavior extends WebSocketBehavior {
         @Override
         public String call() {
             try {
-                return String.format("{ \"status\": \"%s\", \"target\": \"%s\"}",
+                return "{ \"status\": \"%s\", \"target\": \"%s\"}".formatted(
                         resourceRestClient.check(coreAddress, domain, jwt, key)
                         ? TopologyNode.Status.REACHABLE : TopologyNode.Status.UNREACHABLE, key);
             } catch (Exception e) {
                 LOG.warn("Error checking connection for {}", key, e);
-                return String.format("{ \"status\": \"%s\", \"target\": \"%s\"}", TopologyNode.Status.FAILURE, key);
+                return "{ \"status\": \"%s\", \"target\": \"%s\"}".formatted(TopologyNode.Status.FAILURE, key);
             }
         }
     }
