@@ -21,7 +21,6 @@ package org.apache.syncope.client.console.panels;
 import de.agilecoders.wicket.core.markup.html.bootstrap.dialog.Modal;
 import java.io.Serializable;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.SerializationUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.syncope.client.console.SyncopeConsoleSession;
@@ -226,8 +225,8 @@ public class GroupDirectoryPanel extends AnyDirectoryPanel<GroupTO, GroupRestCli
                 target.add(displayAttributeModal.setContent(new GroupDisplayAttributesModalPanel<>(
                         displayAttributeModal,
                         page.getPageReference(),
-                        plainSchemas.stream().map(PlainSchemaTO::getKey).collect(Collectors.toList()),
-                        derSchemas.stream().map(DerSchemaTO::getKey).collect(Collectors.toList()))));
+                        plainSchemas.stream().map(PlainSchemaTO::getKey).sorted().toList(),
+                        derSchemas.stream().map(DerSchemaTO::getKey).sorted().toList())));
                 displayAttributeModal.header(new ResourceModel("any.attr.display"));
                 displayAttributeModal.show(true);
             }
@@ -250,8 +249,8 @@ public class GroupDirectoryPanel extends AnyDirectoryPanel<GroupTO, GroupRestCli
                                 restClient.read(model.getObject().getKey())), target));
             }
         }, ActionType.EDIT,
-                String.format("%s,%s", IdRepoEntitlement.GROUP_READ, IdRepoEntitlement.GROUP_UPDATE)).
-                setRealms(realm, model.getObject().getDynRealms());
+                "%s,%s".formatted(IdRepoEntitlement.GROUP_READ, IdRepoEntitlement.GROUP_UPDATE)).
+                setRealm(realm);
 
         actions.add(new ActionLink<>() {
 
@@ -288,7 +287,7 @@ public class GroupDirectoryPanel extends AnyDirectoryPanel<GroupTO, GroupRestCli
                 typeExtensionsModal.show(true);
             }
         }, ActionType.TYPE_EXTENSIONS, IdRepoEntitlement.GROUP_UPDATE).
-                setRealms(realm, model.getObject().getDynRealms());
+                setRealm(realm);
 
         actions.add(new ActionLink<>() {
 
@@ -306,8 +305,8 @@ public class GroupDirectoryPanel extends AnyDirectoryPanel<GroupTO, GroupRestCli
                 return false;
             }
         }, ActionType.MEMBERS,
-                String.format("%s,%s", IdRepoEntitlement.GROUP_READ, IdRepoEntitlement.GROUP_UPDATE)).
-                setRealms(realm, model.getObject().getDynRealms());
+                "%s,%s".formatted(IdRepoEntitlement.GROUP_READ, IdRepoEntitlement.GROUP_UPDATE)).
+                setRealm(realm);
 
         ActionLink<GroupTO> provisionMembers = new ActionLink<GroupTO>() {
 
@@ -329,7 +328,7 @@ public class GroupDirectoryPanel extends AnyDirectoryPanel<GroupTO, GroupRestCli
         actions.add(
                 provisionMembers,
                 ActionType.PROVISION_MEMBERS,
-                String.format("%s,%s", IdRepoEntitlement.TASK_CREATE, IdRepoEntitlement.TASK_EXECUTE),
+                "%s,%s".formatted(IdRepoEntitlement.TASK_CREATE, IdRepoEntitlement.TASK_EXECUTE),
                 true).setRealm(realm);
 
         ActionLink<GroupTO> deprovisionMembers = new ActionLink<GroupTO>() {
@@ -352,7 +351,7 @@ public class GroupDirectoryPanel extends AnyDirectoryPanel<GroupTO, GroupRestCli
         actions.add(
                 deprovisionMembers,
                 ActionType.DEPROVISION_MEMBERS,
-                String.format("%s,%s", IdRepoEntitlement.TASK_CREATE, IdRepoEntitlement.TASK_EXECUTE),
+                "%s,%s".formatted(IdRepoEntitlement.TASK_CREATE, IdRepoEntitlement.TASK_EXECUTE),
                 true).setRealm(realm);
 
         SyncopeWebApplication.get().getAnyDirectoryPanelAdditionalActionLinksProvider().get(
@@ -431,8 +430,8 @@ public class GroupDirectoryPanel extends AnyDirectoryPanel<GroupTO, GroupRestCli
                 altDefaultModal.show(true);
             }
         }, ActionType.VIEW_AUDIT_HISTORY,
-                String.format("%s,%s", IdRepoEntitlement.GROUP_READ, IdRepoEntitlement.AUDIT_LIST)).
-                setRealms(realm, model.getObject().getDynRealms());
+                "%s,%s".formatted(IdRepoEntitlement.GROUP_READ, IdRepoEntitlement.AUDIT_LIST)).
+                setRealm(realm);
 
         actions.add(new ActionLink<>() {
 
