@@ -49,7 +49,7 @@ import org.apache.syncope.client.console.wicket.markup.html.form.ActionLink;
 import org.apache.syncope.client.console.wicket.markup.html.form.ActionLink.ActionType;
 import org.apache.syncope.client.console.wicket.markup.html.form.ActionLinksTogglePanel;
 import org.apache.syncope.client.console.wicket.markup.html.form.ActionsPanel;
-import org.apache.syncope.client.console.wicket.ws.RefreshWebSocketBehavior;
+import org.apache.syncope.client.console.wicket.ws.BasePageWebSocketBehavior;
 import org.apache.syncope.client.console.wizards.WizardMgtPanel;
 import org.apache.syncope.client.ui.commons.Constants;
 import org.apache.syncope.client.ui.commons.MIMETypesLoader;
@@ -174,7 +174,9 @@ public class JobWidget extends BaseWidget {
         recent = getUpdatedRecent();
 
         container = new WebMarkupContainer("jobContainer");
-        container.add(new RefreshWebSocketBehavior() {
+        pageRef.getPage().getBehaviors().stream().
+                filter(BasePageWebSocketBehavior.class::isInstance).map(BasePageWebSocketBehavior.class::cast).
+                findFirst().ifPresent(wsb -> wsb.add(new BasePageWebSocketBehavior.OnTimerChild(10, TimeUnit.SECONDS) {
 
             private static final long serialVersionUID = 7298597675929755960L;
 
@@ -200,7 +202,7 @@ public class JobWidget extends BaseWidget {
                     }
                 }
             }
-        }.schedule(10, TimeUnit.SECONDS));
+        }));
         add(container);
 
         container.add(new AjaxBootstrapTabbedPanel<>("tabbedPanel", buildTabList(pageRef)));
@@ -213,10 +215,7 @@ public class JobWidget extends BaseWidget {
         List<JobTO> updatedAvailable = new ArrayList<>();
 
         if (SyncopeConsoleSession.get().owns(IdRepoEntitlement.NOTIFICATION_LIST)) {
-            JobTO notificationJob = notificationRestClient.getJob();
-            if (notificationJob != null) {
-                updatedAvailable.add(notificationJob);
-            }
+            Optional.ofNullable(notificationRestClient.getJob()).ifPresent(updatedAvailable::add);
         }
         if (SyncopeConsoleSession.get().owns(IdRepoEntitlement.TASK_LIST)) {
             updatedAvailable.addAll(taskRestClient.listJobs());
@@ -351,17 +350,17 @@ public class JobWidget extends BaseWidget {
                     String roles;
                     switch (jobTO.getType()) {
                         case TASK:
-                            roles = String.format("%s,%s",
+                            roles = "%s,%s".formatted(
                                     IdRepoEntitlement.TASK_EXECUTE, IdRepoEntitlement.TASK_UPDATE);
                             break;
 
                         case REPORT:
-                            roles = String.format("%s,%s",
+                            roles = "%s,%s".formatted(
                                     IdRepoEntitlement.REPORT_EXECUTE, IdRepoEntitlement.REPORT_UPDATE);
                             break;
 
                         case NOTIFICATION:
-                            roles = String.format("%s,%s",
+                            roles = "%s,%s".formatted(
                                     IdRepoEntitlement.NOTIFICATION_EXECUTE, IdRepoEntitlement.NOTIFICATION_UPDATE);
                             break;
 
@@ -425,6 +424,8 @@ public class JobWidget extends BaseWidget {
                                 taskType = TaskType.SCHEDULED;
                             } else if (jobTO.getRefDesc().startsWith("PULL")) {
                                 taskType = TaskType.PULL;
+                            } else if (jobTO.getRefDesc().startsWith("LIVE_SYNC")) {
+                                taskType = TaskType.LIVE_SYNC;
                             } else if (jobTO.getRefDesc().startsWith("PUSH")) {
                                 taskType = TaskType.PUSH;
                             } else if (jobTO.getRefDesc().startsWith("MACRO")) {
@@ -560,7 +561,7 @@ public class JobWidget extends BaseWidget {
         }
     }
 
-    private class RecentExecPanel
+    public class RecentExecPanel
             extends DirectoryPanel<ExecTO, ExecTO, RecentExecPanel.RecentExecProvider, BaseRestClient> {
 
         private static final long serialVersionUID = -8214546246301342868L;
