@@ -31,7 +31,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.Locale;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
-import org.apache.commons.io.IOUtils;
 import org.apache.syncope.common.lib.SyncopeClientException;
 import org.apache.syncope.common.lib.command.CommandTO;
 import org.apache.syncope.common.lib.form.FormProperty;
@@ -76,8 +75,11 @@ public class MacroTaskITCase extends AbstractITCase {
         TCA.setPrinterName("aprinter112");
     }
 
-    private static void createMacroActionsIfNeeded(final String key, final ImplementationEngine engine,
+    private static void createMacroActionsIfNeeded(
+            final String key,
+            final ImplementationEngine engine,
             final String body) {
+
         ImplementationTO macroActions = null;
         try {
             macroActions = IMPLEMENTATION_SERVICE.read(IdRepoImplementationType.MACRO_ACTIONS, key);
@@ -103,16 +105,16 @@ public class MacroTaskITCase extends AbstractITCase {
 
         ImplementationTO command = null;
         try {
-            command = IMPLEMENTATION_SERVICE.read(
-                    IdRepoImplementationType.COMMAND, "GroovyCommand");
+            command = IMPLEMENTATION_SERVICE.read(IdRepoImplementationType.COMMAND, "GroovyCommand");
         } catch (SyncopeClientException e) {
             if (e.getType().getResponseStatus() == Response.Status.NOT_FOUND) {
                 command = new ImplementationTO();
                 command.setKey("GroovyCommand");
                 command.setEngine(ImplementationEngine.GROOVY);
                 command.setType(IdRepoImplementationType.COMMAND);
-                command.setBody(IOUtils.toString(
-                        MacroTaskITCase.class.getResourceAsStream("/GroovyCommand.groovy"), StandardCharsets.UTF_8));
+                command.setBody(new String(
+                        MacroTaskITCase.class.getResourceAsStream("/GroovyCommand.groovy").readAllBytes(),
+                        StandardCharsets.UTF_8));
                 Response response = IMPLEMENTATION_SERVICE.create(command);
                 command = IMPLEMENTATION_SERVICE.read(
                         command.getType(), response.getHeaderString(RESTHeaders.RESOURCE_KEY));
@@ -279,8 +281,9 @@ public class MacroTaskITCase extends AbstractITCase {
         createMacroActionsIfNeeded(
                 "ProcessBuilderMacroActions",
                 ImplementationEngine.GROOVY,
-                IOUtils.toString(
-                        getClass().getResourceAsStream("/ProcessBuilderMacroActions.groovy"), StandardCharsets.UTF_8));
+                new String(
+                        getClass().getResourceAsStream("/ProcessBuilderMacroActions.groovy").readAllBytes(),
+                        StandardCharsets.UTF_8));
 
         MacroTaskTO task = new MacroTaskTO();
         task.setName("groovySecuritySandbox" + UUID.randomUUID().toString());
@@ -306,8 +309,9 @@ public class MacroTaskITCase extends AbstractITCase {
         createMacroActionsIfNeeded(
                 "BashMacroActions",
                 ImplementationEngine.GROOVY,
-                IOUtils.toString(
-                        getClass().getResourceAsStream("/BashMacroActions.groovy"), StandardCharsets.UTF_8));
+                new String(
+                        getClass().getResourceAsStream("/BashMacroActions.groovy").readAllBytes(),
+                        StandardCharsets.UTF_8));
 
         task = new MacroTaskTO();
         task.setName("groovySecuritySandbox" + UUID.randomUUID().toString());
